# QtMessenger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/include/: auth_handler.h  chat_controller.h  chat_window.h  emoji_window.h  inetwork_client.h  login_window.h  network_client.h  network_client_factory.h  password_window.h  register_window.h  user_list_window.h
client/src/: auth_handler.cpp  chat_controller.cpp  chat_window.cpp  emoji_window.cpp  login_window.cpp  main.cpp  network_client.cpp  network_client_factory.cpp  password_window.cpp  register_window.cpp  user_list_window.cpp
common/include/: database_manager.h  message.h  quuid_hash.h
common/src/: database_manager.cpp  message.cpp
server/include/: async_tcp_server.h  boost_asio_client_session.h  client_manager.h  client_session.h  client_session_interface.h  iserver.h  message_handler.h  multithreaded_server.h
server/src/: async_tcp_server.cpp  boost_asio_client_session.cpp  client_manager.cpp  client_session.cpp  main.cpp  main_multithreaded.cpp  message_handler.cpp  multithreaded_server.cpp
